# peek-obj

./: .gitignore  Cargo.toml  README.md  dados.txt  run  screenshot.txt
bullshit/: bresensolids.kc  fmt_test.rs  format_lib.rs  indices.txt  log  random_crap.rs
data/yade/: mock-pretty.txt  mock.txt
src/: app.rs  ball.rs  bench.rs  benchmark.rs  fps_measure.rs  lib.rs  main-old.rs  main.rs  maths.rs  obj_reader.rs  rendering.rs  settings.rs  terminal.rs  terminal_wrapper.rs  timer.rs  utils.rs
src/file_readers/: mod.rs  obj_reader.rs  yade_dem_reader.rs
src/maths/: _unused.rs  fvec2.rs  ivec2.rs  matrices.rs  uvec2.rs  vec3.rs  vec4.rs
src/old/: char-writer.rs
src/rendering/: _unused.rs  ball_painter.rs  bounding_box.rs  camera.rs  culling.rs  help_screen.rs  mesh.rs  obj_renderer.rs  primitives.rs  renderer.rs  utils.rs  yade_renderer.rs  z_sorting_mode.rs
src/rendering/render_settings/: ball_fill_mode.rs  cull_mode.rs  gizmos_mode.rs  mod.rs  z_sorting_mode.rs
src/terminal/: mod.rs  terminal_buffer.rs  terminal_wrapper.rs
