[package]
name = "peekfbx"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "args"
# path = "src/main.rs"


[dependencies]
crossterm = "0.25"
rand = "0.8.5"
# fbxcel = "0.9.0"
# num-traits = "0.2"